Rule: using with instead of set in builder Rule: customized coreLocator to return no cores Rule: Builder that returns a client and used to explicitly create cores