@@ -16,17 +16,16 @@
  */
 package org.apache.solr.util;
 
-import static org.apache.solr.SolrTestCaseJ4.DEFAULT_TEST_COLLECTION_NAME;
-
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import org.apache.lucene.tests.util.LuceneTestCase;
+import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.embedded.EmbeddedSolrServer;
 import org.apache.solr.client.solrj.embedded.EmbeddedSolrServer.RequestWriterSupplier;
 import org.apache.solr.client.solrj.impl.HttpClientUtil;
+import org.apache.solr.client.solrj.request.CoreAdminRequest;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.CoreDescriptor;
 import org.apache.solr.core.NodeConfig;
@@ -35,7 +34,10 @@ import org.apache.solr.update.UpdateShardHandlerConfig;
 /** TODO NOCOMMIT document */
 public class EmbeddedSolrServerTestRule extends SolrClientTestRule {
 
+  private EmbeddedSolrServer adminClient = null;
   private EmbeddedSolrServer client = null;
+
+  private CoreContainer container = null;
 
   public Builder build() {
     return new Builder();
@@ -44,37 +46,19 @@ public class EmbeddedSolrServerTestRule extends SolrClientTestRule {
   public class Builder {
     private Path solrHome; // mandatory
     private Path dataDir;
-    private String collectionName = DEFAULT_TEST_COLLECTION_NAME;
-    private String configFile;
-    private String schemaFile;
     private RequestWriterSupplier requestWriterSupplier = RequestWriterSupplier.JavaBin;
 
-    public Builder setSolrHome(Path solrHome) {
+    public Builder withSolrHome(Path solrHome) {
       this.solrHome = solrHome;
       return this;
     }
 
-    public Builder useTempDataDir() {
+    public Builder withTempDataDir() {
       this.dataDir = LuceneTestCase.createTempDir("data-dir");
       return this;
     }
 
-    public Builder setSchemaFile(String schemaFile) {
-      this.schemaFile = schemaFile;
-      return this;
-    }
-
-    public Builder setConfigFile(String configFile) {
-      this.configFile = configFile;
-      return this;
-    }
-
-    public Builder setCollectionName(String collectionName) {
-      this.collectionName = collectionName;
-      return this;
-    }
-
-    public Builder setRequestWriterSupplier(RequestWriterSupplier requestWriterSupplier) {
+    public Builder withRequestWriterSupplier(RequestWriterSupplier requestWriterSupplier) {
       this.requestWriterSupplier = requestWriterSupplier;
       return this;
     }
@@ -85,18 +69,6 @@ public class EmbeddedSolrServerTestRule extends SolrClientTestRule {
 
     public Path getDataDir() {
       return this.dataDir;
-    }
-
-    public String getSchemaFile() {
-      return schemaFile;
-    }
-
-    public String getConfigFile() {
-      return configFile;
-    }
-
-    public String getCollectionName() {
-      return collectionName;
     }
 
     public RequestWriterSupplier getRequestWriterSupplier() {
@@ -112,18 +84,82 @@ public class EmbeddedSolrServerTestRule extends SolrClientTestRule {
 
     NodeConfig nodeConfig = buildTestNodeConfig(b);
 
+    // TODO nocommit
     var coreLocator =
         new ReadOnlyCoresLocator() {
           @Override
           public List<CoreDescriptor> discover(CoreContainer cc) {
-            return List.of(buildCoreDesc(cc, b));
+            return Collections.emptyList();
           }
         };
 
-    CoreContainer container = new CoreContainer(nodeConfig, coreLocator);
+    container = new CoreContainer(nodeConfig, coreLocator);
+
     container.load();
 
-    client = new EmbeddedSolrServer(container, b.getCollectionName(), b.getRequestWriterSupplier());
+    adminClient = new EmbeddedSolrServer(container, null, b.getRequestWriterSupplier());
+  }
+
+  public NewCollectionBuilder newCollection(String name) {
+    return new NewCollectionBuilder(name);
+  }
+
+  public class NewCollectionBuilder {
+    private String name;
+    private String configSet;
+    private String configFile;
+    private String schemaFile;
+
+    public NewCollectionBuilder(String name) {
+      this.name = name;
+    }
+
+    public NewCollectionBuilder withConfigSet(String configSet) {
+      this.configSet = configSet;
+      return this;
+    }
+
+    public NewCollectionBuilder withConfigFile(String configFile) {
+      this.configFile = configFile;
+      return this;
+    }
+
+    public NewCollectionBuilder withSchemaFile(String schemaFile) {
+      this.schemaFile = schemaFile;
+      return this;
+    }
+
+    public String getName() {
+      return name;
+    }
+
+    public String getConfigSet() {
+      return configSet;
+    }
+
+    public String getConfigFile() {
+      return configFile;
+    }
+
+    public String getSchemaFile() {
+      return schemaFile;
+    }
+
+    public void create() throws SolrServerException, IOException {
+      EmbeddedSolrServerTestRule.this.create(this);
+    }
+  }
+
+  private void create(NewCollectionBuilder b) throws SolrServerException, IOException {
+
+    client = new EmbeddedSolrServer(container, b.getName());
+
+    CoreAdminRequest.createCore(
+        b.getName(),
+        container.getCoreRootDirectory().resolve(b.getName()).toString(),
+        client,
+        b.getConfigFile(),
+        b.getSchemaFile());
   }
 
   private NodeConfig buildTestNodeConfig(Builder b) {
@@ -136,28 +172,29 @@ public class EmbeddedSolrServerTestRule extends SolrClientTestRule {
             30000,
             UpdateShardHandlerConfig.DEFAULT_METRICNAMESTRATEGY,
             UpdateShardHandlerConfig.DEFAULT_MAXRECOVERYTHREADS);
+
     return new NodeConfig.NodeConfigBuilder("testNode", b.getSolrHome())
         .setUpdateShardHandlerConfig(updateShardHandlerConfig)
         .build();
   }
 
-  private CoreDescriptor buildCoreDesc(CoreContainer cc, Builder b) {
-    Map<String, String> coreProps = new HashMap<>();
-    if (b.configFile != null) {
-      coreProps.put(CoreDescriptor.CORE_CONFIG, b.configFile);
-    }
-    if (b.schemaFile != null) {
-      coreProps.put(CoreDescriptor.CORE_SCHEMA, b.schemaFile);
-    }
-    if (b.dataDir != null) {
-      coreProps.put(CoreDescriptor.CORE_DATADIR, b.dataDir.toString());
-    }
-
-    var coreName = b.collectionName;
-    var instanceDir = cc.getCoreRootDirectory().resolve(coreName);
-    return new CoreDescriptor(
-        coreName, instanceDir, coreProps, cc.getContainerProperties(), cc.getZkController());
-  }
+  //  private CoreDescriptor buildCoreDesc(CoreContainer cc, Builder b) {
+  //    Map<String, String> coreProps = new HashMap<>();
+  //    if (b.configFile != null) {
+  //      coreProps.put(CoreDescriptor.CORE_CONFIG, b.configFile);
+  //    }
+  //    if (b.schemaFile != null) {
+  //      coreProps.put(CoreDescriptor.CORE_SCHEMA, b.schemaFile);
+  //    }
+  //    if (b.dataDir != null) {
+  //      coreProps.put(CoreDescriptor.CORE_DATADIR, b.dataDir.toString());
+  //    }
+  //
+  //    var coreName = b.collectionName;
+  //    var instanceDir = cc.getCoreRootDirectory().resolve(coreName);
+  //    return new CoreDescriptor(
+  //        coreName, instanceDir, coreProps, cc.getContainerProperties(), cc.getZkController());
+  //  }
 
   @Override
   protected void after() {
@@ -181,7 +218,8 @@ public class EmbeddedSolrServerTestRule extends SolrClientTestRule {
   }
 
   @Override
-  public Path getSolrHome() {
-    return Path.of(client.getCoreContainer().getSolrHome());
+  public EmbeddedSolrServer getSolrClient(String name) {
+    assert client != null;
+    return new EmbeddedSolrServer(client.getCoreContainer(), name);
   }
 }
